--- a/src/main/resources/templates/carrinhoCompras.html
+++ b/src/main/resources/templates/carrinhoCompras.html
@@ -363,15 +363,11 @@
               </div>
           </form>
           </div>
-          <!-- <div class="modal-footer">
-            <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
-          </div> -->
         </div>
       </div>
     </div>
 
 
-    <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
     <!-- Footer -->
     <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
@@ -495,11 +491,9 @@
     </footer>
     <!-- Footer -->
   </div>
-  <!-- End of .container -->
-
   <script>
       document.addEventListener("DOMContentLoaded", () => {
-  hideEnderecoBox(); // Chama a função para ocultar o divEndereco inicialmente
+  hideEnderecoBox(); 
   addEventListeners();
   preencherEndereco();
   document
