--- a/src/main/resources/templates/alterarProdutoEstoquista.html
+++ b/src/main/resources/templates/alterarProdutoEstoquista.html
@@ -65,11 +65,6 @@
                 <label for="descricao" class="form-label">Descrição</label>
                 <textarea class="form-control" id="descricao" name="descricaoProduto" rows="3" maxlength="1998" style="border: none; box-shadow: 1px 1px 6px #0000001c; border-bottom: 1px solid #ccc; color: white; background-color: transparent;" th:text="${produto.descricaoProduto}" readonly></textarea>
             </div>
-
-            <!-- <div class="mb-3">
-                <label for="imagem" class="form-label text-white">Imagens</label>
-                <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagemInput" multiple>
-            </div> -->
             <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
             
             <th:block th:each="imagem, iterStat : ${produto.imagens}">
@@ -84,179 +79,12 @@
 
                 </div>
             </div>
-<!--            <div class="col-md-12">-->
-<!--                <div id="preview" class="row p-2 justify-content-center">-->
-<!--                </div>-->
-<!--            </div>-->
-
-
             <div class="d-flex justify-content-end mt-4">
                 <button type="submit" class="btn btn-primary btn-sm me-2 buttonSalvar">Salvar Alteração</button>
                 <a href="/estoque/listarProdutos" class="btn btn-secondary btn-sm">Cancelar</a>
             </div>
         </form>
     </div>
-
-    <script>
-
-
-    document.body.addEventListener('change', function (event) {
-      if (event.target.id === 'imagem') {
-        var preview = document.getElementById('preview');
-        preview.innerHTML = '';
-
-
-        for (var i = 0; i < event.target.files.length; i++) {
-          handleFile(event.target.files[i], i);
-        }
-      }
-    });
-
-
-    document.getElementById('modalCadastroProd').addEventListener('submit', function (e) {
-      var radios = document.getElementsByName('imgPrincipal');
-      var formValid = false;
-
-      var i = 0;
-      while (!formValid && i < radios.length) {
-        if (radios[i].checked) formValid = true;
-        i++;
-      }
-
-      if (!formValid) {
-        alert("Por favor, selecione uma imagem principal.");
-        e.preventDefault();
-      }
-    });
-
-
-
-
-
-
-
-    //---------------------------------------------------------------
-
-
-    document.addEventListener("DOMContentLoaded", function () {
-  const imagemPrincipalNova = document.getElementById("imagemPrincipal");
-  const imgPrincipalRadios = document.querySelectorAll(
-    'input[name="imgPrincipal"]'
-  );
-
-  imgPrincipalRadios.forEach((radio, index) => {
-    radio.addEventListener("change", function () {
-      if (this.checked) {
-        imagemPrincipal.value = this.value;
-      }
-    });
-  });
-});
-
-document.querySelectorAll(".btn-remove").forEach((btn) => {
-  btn.addEventListener("click", (event) => {
-    const idImagem = event.target.dataset.id;
-    const imagensParaRemover = document.getElementById("imagensParaRemover");
-    imagensParaRemover.value += idImagem + ",";
-    event.target.closest(".card").remove();
-  });
-});
-
-function updateRadioInputs() {
-  var preview = document.getElementById("preview");
-  var radios = preview.querySelectorAll(".form-check-input");
-  var labels = preview.querySelectorAll(".form-check-label");
-  for (var i = 0; i < radios.length; i++) {
-    radios[i].id = "radios" + i;
-    radios[i].value = i;
-    labels[i].htmlFor = "radios" + i;
-  }
-}
-
-function removeImage(card, file) {
-  var input = document.getElementById("imagem");
-  var preview = document.getElementById("preview");
-
-  preview.removeChild(card);
-
-  // Cria um novo objeto de FormData
-  var dataTransfer = new DataTransfer();
-  for (var i = 0; i < input.files.length; i++) {
-    if (input.files[i] !== file) {
-      dataTransfer.items.add(input.files[i]);
-    }
-  }
-
-  // Atualiza o input com os arquivos restantes
-  input.files = dataTransfer.files;
-}
-
-function handleFile(file, i) {
-  if (!file.type.match("image/jpeg") && !file.type.match("image/png")) {
-    alert("Só são permitidos arquivos de imagem (jpg, jpeg, png).");
-    this.value = "";
-    return;
-  }
-
-  var reader = new FileReader();
-
-  reader.onload = function (e) {
-    var img = document.createElement("img");
-    img.src = e.target.result;
-    img.alt = "Imagem-produto";
-    img.className = "card-img-top";
-
-    var cardBody = document.createElement("div");
-    cardBody.className = "card-body d-flex flex-column";
-
-    var formCheck = document.createElement("div");
-    formCheck.className = "form-check mt-auto";
-
-    var radioInput = document.createElement("input");
-    radioInput.className = "form-check-input";
-    radioInput.type = "radio";
-    radioInput.name = "imgPrincipal";
-    radioInput.id = "radios" + i;
-    radioInput.value = i;
-    var radioLabel = document.createElement("label");
-    radioLabel.className = "form-check-label";
-    radioLabel.htmlFor = "radios" + i;
-    radioLabel.textContent = "Imagem principal";
-
-    radioInput.addEventListener("change", function () {
-      if (this.checked) {
-        imagemPrincipal.value = "";
-        radioInput.value = this.value;
-      }
-    });
-
-    formCheck.appendChild(radioInput);
-    formCheck.appendChild(radioLabel);
-    cardBody.appendChild(formCheck);
-
-    var closeButton = document.createElement("button");
-    closeButton.type = "button";
-    closeButton.className = "btn-close";
-    closeButton.setAttribute("aria-label", "Close");
-
-    var card = document.createElement("div");
-    card.className = "card p-2 m-1";
-    card.style.width = "15rem";
-    card.appendChild(closeButton);
-    card.appendChild(img);
-    card.appendChild(cardBody);
-
-    closeButton.addEventListener("click", function () {
-      removeImage(card, file);
-      updateRadioInputs();
-    });
-
-    preview.appendChild(card);
-  };
-
-  reader.readAsDataURL(file);
-}
-
-    </script>
+    <script src="/js/alterarProdutoEstoquista.js"></script>
 </body>
 </html>
