--- a/src/main/resources/templates/checkoutPagamento.html
+++ b/src/main/resources/templates/checkoutPagamento.html
@@ -19,9 +19,9 @@
     }
     .position-absolute {
     position: absolute;
-    top: 50%; /* Coloca o elemento no centro vertical */
-    left: 50%; /* Coloca o elemento no centro horizontal */
-    transform: translate(-50%, -50%); /* Move o elemento de volta para cima e para a esquerda pela metade de sua largura e altura */
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%);
 }
     .nome-produto {
         width: 200px;
@@ -47,7 +47,6 @@
         width: 170px;
         height: 135px;
         object-fit: cover;
-        /* Isso mantém a proporção e cobre a área especificada */
     }
 
     .botaoPadrao {
@@ -239,17 +238,11 @@
     <div id="modalMessages" class="position-absolute"></div>
 
 
-    <!-- Remove the container if you want to extend the Footer to full width. -->
     <div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
-        <!-- Footer -->
         <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
-            <!-- Grid container -->
             <div class="container p-4 pb-0">
-                <!-- Section: Links -->
                 <section class="">
-                    <!--Grid row-->
                     <div class="row">
-                        <!--Grid column-->
                         <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
 
@@ -259,9 +252,6 @@
                                 De segunda a sexta-feira de 08h as 18h. Exceto feriados.
                             </p>
                         </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
                         <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                             <h5 class="text-white">Sobre a Winery</h5>
 
@@ -276,9 +266,6 @@
 
                             </ul>
                         </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
                         <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                             <h5 class="text-white">Suporte</h5>
 
@@ -297,9 +284,6 @@
 
                             </ul>
                         </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
                         <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                             <h5 class="text-white">Categorias</h5>
 
@@ -318,9 +302,6 @@
                                 </li>
                             </ul>
                         </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
                         <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                             <h5 class="text-white">Formas de Pagamento</h5>
 
@@ -328,15 +309,10 @@
                                 <img src="/imagens/formaPagamento.webp" width="200px" alt="">
                             </ul>
                         </div>
-                        <!--Grid column-->
                     </div>
-                    <!--Grid row-->
                 </section>
-                <!-- Section: Links -->
 
                 <hr class="mb-4" />
-
-                <!-- Section: CTA -->
                 <section class="text-center">
                     <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_empresabuscape_horizontal.png"
                         width="148" height="30" alt="Empresa reconhecida buscapé" loading="lazy"
@@ -358,24 +334,14 @@
                         alt="Empresa campeã prêmio reclame aqui 2022" loading="lazy" class="sc-kpKSZj bigULn"
                         style="margin-left: 30px;">
                 </section>
-                <!-- Section: CTA -->
-
                 <hr class="mb-4" />
-
-                <!-- Section: Social media -->
             </div>
-            <!-- Grid container -->
-
-            <!-- Copyright -->
             <div class="text-center p-3" style="background-color: transparent !important;">
                 © 2023 Copyright por Winery
 
             </div>
-            <!-- Copyright -->
         </footer>
-        <!-- Footer -->
     </div>
-    <!-- End of .container -->
 
     <script src="/js/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
