--- a/src/main/resources/templates/landingPageProduto.html
+++ b/src/main/resources/templates/landingPageProduto.html
@@ -13,7 +13,7 @@
 </head>
 <style>
 .star {
-color: lightgray; /* Cor das estrelas inativas */
+color: lightgray; 
 cursor: pointer;
 }
 .corFundo {
@@ -56,13 +56,11 @@ nav ul li a:hover {
     border-bottom: 2px solid #fff !important;
 }
 
-/* Define uma largura fixa para todos os cards */
 .card {
     width: 280px;
     margin: 10px;
 }
 
-/* Ajusta o layout dos cards para 4 por linha */
 .cards-row {
     display: flex;
     flex-wrap: wrap;
@@ -250,23 +248,20 @@ nav ul li a:hover {
             <div class="carousel-item active">
                 <img src="https://evino-res.cloudinary.com/image/upload/f_auto,w_1920,dpr_1.0,t_banner/v1699303951/campaigns/2023/11_Novembro/2023_11_06_LancamentoTerreDiMario_IC/hero_1_v2_multiple_desktop.png" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p> -->
+                  
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="https://www.divinho.com.br/media/mageplaza/bannerslider/banner/image/b/a/banner_divinho_verde_1920x520.png" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p> -->
+                  
                 </div>
             </div>
 
             <div class="carousel-item">
                 <img src="https://famigliavalduga.vteximg.com.br/arquivos/ids/162248/2457.6 Campanha HAPPY FRIDAY DOMNO - DESCONTOS INDIVIDUAIS Banners_desktop.png?v=638348776760800000" class="d-block w-100" alt="..." style="max-width: 100%; height: 500px;">
                 <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p> -->
+                
                 </div>
             </div>
 
@@ -319,17 +314,12 @@ nav ul li a:hover {
 <!-- ANA AQUI É O INICIO DO MUDAR AS PAGINAS -->
 <nav>
     <ul>
-        <!-- Link para a página anterior -->
         <li th:if="${produtos.hasPrevious()}">
             <a th:href="@{/Winery(page=${produtos.previousPageable().pageNumber})}" class="page-link">Anterior</a>
         </li>
-
-        <!-- Links para páginas numéricas -->
         <li th:each="i : ${#numbers.sequence(0, produtos.totalPages - 1)}">
             <a th:href="@{/Winery(page=${i})}" class="page-link" th:text="${i + 1}"></a>
         </li>
-
-        <!-- Link para a próxima página -->
         <li th:if="${produtos.hasNext()}">
             <a th:href="@{/Winery(page=${produtos.nextPageable().pageNumber})}" class="page-link">Próximo</a>
         </li>
@@ -337,21 +327,11 @@ nav ul li a:hover {
 </nav>
 
 
-
-
-
-<!-- Footer -->
-<!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
-    <!-- Footer -->
     <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
-        <!-- Grid container -->
         <div class="container p-4 pb-0">
-            <!-- Section: Links -->
             <section class="">
-                <!--Grid row-->
                 <div class="row">
-                    <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                         <img class="mb-3" th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
 
@@ -361,9 +341,6 @@ nav ul li a:hover {
                             De segunda a sexta-feira de 08h as 18h. Exceto feriados.
                         </p>
                     </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-white">Sobre a Winery</h5>
 
@@ -378,9 +355,6 @@ nav ul li a:hover {
 
                         </ul>
                     </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-white">Suporte</h5>
 
@@ -399,9 +373,6 @@ nav ul li a:hover {
 
                         </ul>
                     </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-white">Categorias</h5>
 
@@ -420,9 +391,6 @@ nav ul li a:hover {
                             </li>
                         </ul>
                     </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-white">Formas de Pagamento</h5>
 
@@ -430,15 +398,11 @@ nav ul li a:hover {
                             <img th:src="@{/imagens/formaPagamento.webp}" width="200px" alt="">
                         </ul>
                     </div>
-                    <!--Grid column-->
                 </div>
-                <!--Grid row-->
+
             </section>
-            <!-- Section: Links -->
 
             <hr class="mb-4" />
-
-            <!-- Section: CTA -->
             <section class="text-center">
                 <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_empresabuscape_horizontal.png"
                     width="148" height="30" alt="Empresa reconhecida buscapé" loading="lazy"
@@ -460,24 +424,14 @@ nav ul li a:hover {
                     alt="Empresa campeã prêmio reclame aqui 2022" loading="lazy" class="sc-kpKSZj bigULn"
                     style="margin-left: 30px;">
             </section>
-            <!-- Section: CTA -->
-
             <hr class="mb-4" />
-
-            <!-- Section: Social media -->
         </div>
-        <!-- Grid container -->
-
-        <!-- Copyright -->
         <div class="text-center p-3" style="background-color: transparent !important;">
             © 2023 Copyright por Winery
 
         </div>
-        <!-- Copyright -->
     </footer>
-    <!-- Footer -->
 </div>
-<!-- End of .container -->
 
 
 
@@ -485,7 +439,6 @@ nav ul li a:hover {
 
 <script th:inline="javascript">
     $(document).ready(function() {
-        // Selecionar todos os elementos com a classe "star-rating"
         $(".star-rating").each(function() {
             // Obter a avaliação do produto a partir do atributo "data-avaliacao"
             const avaliacaoProdutoThymeleaf = parseFloat($(this).data("avaliacao"));
@@ -533,8 +486,6 @@ nav ul li a:hover {
       }
     });
   }
-
-  // Chame a função para alternar os elementos com base no estado da sessão
   toggleSessionElements();
 
 
@@ -542,12 +493,11 @@ nav ul li a:hover {
 
     function showLogoutMessage() {
     window.alert("Sessão encerrada com sucesso.");
-    // Redirecione para a página de logout
     window.location.href = "/authentication/logout";
 }
 
 
-//carrinho
+
 let quantidadeItensCarrinho = 0;
 let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
 
