--- a/src/main/resources/templates/listaPedidoEstoquista.html
+++ b/src/main/resources/templates/listaPedidoEstoquista.html
@@ -188,17 +188,11 @@
 </div>
 
 
-<!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px !important;">
-  <!-- Footer -->
   <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
-    <!-- Grid container -->
     <div class="container p-4 pb-0">
-      <!-- Section: Links -->
       <section class="">
-        <!--Grid row-->
         <div class="row">
-          <!--Grid column-->
           <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
             <img class="mb-3" th:src="@{/imagens/logoWinery250x250new.png}" width="150px"
                  alt="Logo da Winery">
@@ -209,9 +203,6 @@
               De segunda a sexta-feira de 08h as 18h. Exceto feriados.
             </p>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
           <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
             <h5 class="text-white">Sobre a Winery</h5>
 
@@ -226,9 +217,6 @@
 
             </ul>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
           <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
             <h5 class="text-white">Suporte</h5>
 
@@ -247,9 +235,6 @@
 
             </ul>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
           <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
             <h5 class="text-white">Categorias</h5>
 
@@ -268,9 +253,6 @@
               </li>
             </ul>
           </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
           <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
             <h5 class="text-white">Formas de Pagamento</h5>
 
@@ -278,15 +260,11 @@
               <img src="../static/imagens/formaPagamento.webp" width="200px" alt="">
             </ul>
           </div>
-          <!--Grid column-->
         </div>
-        <!--Grid row-->
       </section>
-      <!-- Section: Links -->
 
       <hr class="mb-4"/>
 
-      <!-- Section: CTA -->
       <section class="text-center">
         <img src="https://static.kabum.com.br/conteudo/temas/001/imagens/rodape/selo_empresabuscape_horizontal.png"
              width="148" height="30" alt="Empresa reconhecida buscapé" loading="lazy"
@@ -308,137 +286,21 @@
              alt="Empresa campeã prêmio reclame aqui 2022" loading="lazy" class="sc-kpKSZj bigULn"
              style="margin-left: 30px;">
       </section>
-      <!-- Section: CTA -->
-
       <hr class="mb-4"/>
-
-      <!-- Section: Social media -->
     </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
     <div class="text-center p-3" style="background-color: transparent !important;">
       © 2023 Copyright por Winery
 
     </div>
-    <!-- Copyright -->
   </footer>
-  <!-- Footer -->
 </div>
-<!-- End of .container -->
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-
-<script>
-
-
-        function showCreditCardForm() {
-            const creditCardForm = document.getElementById("creditCardForm");
-            const creditCardRadio = document.getElementById("flexRadioDefault3");
-
-            if (creditCardRadio.checked) {
-                creditCardForm.style.display = "block";
-            } else {
-                creditCardForm.style.display = "none";
-            }
-        }
-
-        function activateRadio(radioId) {
-            const radioCartao = document.getElementById(radioId);
-            if (radioCartao) {
-                radioCartao.checked = true;
-                showCreditCardForm();
-            }
-        }
-
-        function showBoletoForm() {
-            const boletoForm = document.getElementById("boletoForm");
-            const boletoRadio = document.getElementById("flexRadioDefault2");
-
-            if (boletoRadio.checked) {
-                boletoForm.style.display = "block";
-            } else {
-                boletoForm.style.display = "none";
-            }
-        }
-
-        function activateRadio(radioId) {
-            const radioBoleto = document.getElementById(radioId);
-            if (radioBoleto) {
-                radioBoleto.checked = true;
-                showBoletoForm();
-            }
-        }
-
-        function showPixForm() {
-            const pixForm = document.getElementById("pixForm");
-            const pixRadio = document.getElementById("flexRadioDefault1");
-
-            if (pixRadio.checked) {
-                pixForm.style.display = "block";
-            } else {
-                pixForm.style.display = "none";
-            }
-        }
-
-        function activateRadio(radioId) {
-            const radioPix = document.getElementById(radioId);
-            if (radioPix) {
-                radioPix.checked = true;
-                showPixForm();
-            }
-        }
-
-// Função para verificar se a sessão está ativa
-function isSessionActive(callback) {
-    // Fazer uma requisição para a rota do controlador
-    fetch('/verificar-sessao')
-      .then(response => response.json())
-      .then(data => {
-        callback(data); // Chamar a função de callback com o resultado
-      })
-      .catch(error => {
-        console.error('Erro ao verificar a sessão:', error);
-        callback(false); // Tratar erros como sessão inativa
-      });
-  }
-
-  // Função para alternar entre "Meu perfil" e "Faça login/crie seu login"
-  function toggleSessionElements() {
-    const perfilButton = document.getElementById("perfil-button");
-    const loginLink = document.getElementById("login-link");
-
-    isSessionActive(function (isSessionActive) {
-      if (isSessionActive) {
-        // Sessão ativa, mostrar "Meu perfil" e ocultar "Faça login/crie seu login"
-        perfilButton.style.display = "block";
-        loginLink.style.display = "none";
-      } else {
-        // Sessão inativa, mostrar "Faça login/crie seu login" e ocultar "Meu perfil"
-        perfilButton.style.display = "none";
-        loginLink.style.display = "block";
-      }
-    });
-  }
-
-  // Chame a função para alternar os elementos com base no estado da sessão
-  toggleSessionElements();
-
-
-  function atualizarQuantidadeItensCarrinho() {
-    document.getElementById("carrinhoItens").textContent = quantidadeItensCarrinho;
-}
-
-let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
-
-quantidadeItensCarrinho = carrinho.reduce((total, item) => total + item.quantidade, 0);
-atualizarQuantidadeItensCarrinho();
-
-</script>
+<script src="/js/listaPedidoEstoquista.js"></script>
 
 
 </body>
